@@ -56,17 +56,17 @@ protected:
 private:
 	void initQyotoRuntime();
 	QByteArray camelize(QByteArray name);
+	QList<const char*> assemblyGetClasses(const char* path);
 	
 	QHash<QString, MonoAssembly*> assemblies;
 	QHash<MonoAssembly*, MonoImage*> images;
 	
 	MonoAssembly* qyotoAssembly;
 	MonoImage* qyotoImage;
+	MonoMethod* initRuntimeMethod;
 	
 	QList<MonoObject*> objects;
 	QList<guint32> handles;
-	
-	bool qyotoInitialized;
 };
 K_EXPORT_PLUGIN(KimonoPluginFactory)
 
@@ -82,7 +82,7 @@ void atexitfn()
 }
 
 KimonoPluginFactory::KimonoPluginFactory()
-	: qyotoAssembly(0), qyotoImage(0), qyotoInitialized(false)
+	: qyotoAssembly(0), qyotoImage(0), initRuntimeMethod(0)
 {
 }
 
@@ -109,22 +109,47 @@ KimonoPluginFactory::camelize(QByteArray name)
     return camelCaseName;
 }
 
+QList<const char*>
+KimonoPluginFactory::assemblyGetClasses(const char* path)
+{
+	static MonoImage* corlib = mono_get_corlib();
+	static MonoMethodDesc* assemblyLoadFromDesc = mono_method_desc_new("System.Reflection.Assembly:LoadFrom(string)", true);
+	static MonoMethod* assemblyLoadFrom = mono_method_desc_search_in_image(assemblyLoadFromDesc, corlib);
+	
+	void* args[1];
+	args[0] = mono_string_new(domain, path);
+	MonoObject* assembly = mono_runtime_invoke(assemblyLoadFrom, NULL, args, NULL);
+	
+	static MonoMethodDesc* assemblyGetTypesDesc = mono_method_desc_new("System.Reflection.Assembly:GetTypes()", true);
+	static MonoMethod* assemblyGetTypes = mono_method_desc_search_in_image(assemblyGetTypesDesc, corlib);
+	
+	MonoArray* types = (MonoArray*) mono_runtime_invoke(assemblyGetTypes, assembly, NULL, NULL);
+	
+	static MonoClass* type = mono_class_from_name(corlib, "System", "MonoType");
+	static MonoProperty* typeFullName = mono_class_get_property_from_name(type, "FullName");
+	
+	QList<const char*> ret;
+	for (int i = 0; i < mono_array_length(types); i++) {
+		MonoObject* obj = mono_array_get(types, MonoObject*, i);
+		ret << mono_string_to_utf8((MonoString*) mono_property_get_value(typeFullName, obj, NULL, NULL));
+	}
+	
+	return ret;
+}
+
 void
 KimonoPluginFactory::initQyotoRuntime()
 {
-	if (qyotoInitialized)
-		return;
-
 	// open the assembly 'qt-dotnet', look for Qyoto.SmokeInvocation.InitRuntime() and call it
 	// it seems that there's now way to call static c'tors explicitly, hence the extra method
-	qyotoAssembly = mono_domain_assembly_open(domain, "qt-dotnet");
-	qyotoImage = mono_assembly_get_image(qyotoAssembly);
-	MonoMethodDesc* desc = mono_method_desc_new("Qyoto.SmokeInvocation:InitRuntime()", true);
-	MonoClass* klass = mono_class_from_name(qyotoImage, "Qyoto", "SmokeInvocation");
-	MonoMethod* meth = mono_method_desc_search_in_class(desc, klass);
-	mono_runtime_invoke(meth, NULL, NULL, NULL);
-	
-	qyotoInitialized = true;
+	if (!initRuntimeMethod) {
+		qyotoAssembly = mono_domain_assembly_open(domain, "qt-dotnet");
+		qyotoImage = mono_assembly_get_image(qyotoAssembly);
+		MonoMethodDesc* desc = mono_method_desc_new("Qyoto.SmokeInvocation:InitRuntime()", true);
+		MonoClass* klass = mono_class_from_name(qyotoImage, "Qyoto", "SmokeInvocation");
+		initRuntimeMethod = mono_method_desc_search_in_class(desc, klass);
+	}
+	mono_runtime_invoke(initRuntimeMethod, NULL, NULL, NULL);
 }
 
 QObject*
@@ -176,14 +201,34 @@ KimonoPluginFactory::create(const char *iface, QWidget *parentWidget,
 	QString className = camelize(file.completeBaseName().toLatin1());
 	MonoClass* klass = mono_class_from_name(image, (const char*) nameSpace.toLatin1(), (const char*) className.toLatin1());
 
-	// we want the Foo.Bar:.ctor(QObject, List<QVariant>)
-	QString methodName = nameSpace + "." + className + ":.ctor(Qyoto.QObject,System.Collections.Generic.List`1)";
-	MonoMethodDesc* desc = mono_method_desc_new((const char*) methodName.toLatin1(), true);
-	
-	MonoMethod* ctor = mono_method_desc_search_in_class(desc, klass);
-	
+	MonoMethod* ctor = 0;
+	if (klass) {
+		// we want the Foo.Bar:.ctor(QObject, List<QVariant>)
+		QString methodName = nameSpace + "." + className + ":.ctor(Qyoto.QObject,System.Collections.Generic.List`1)";
+		MonoMethodDesc* desc = mono_method_desc_new((const char*) methodName.toLatin1(), true);
+		ctor = mono_method_desc_search_in_class(desc, klass);
+	} else {
+		QString ifacestr(iface);
+		ifacestr.replace("::", ".");
+		foreach(QString name, assemblyGetClasses((const char*) path.toLatin1())) {
+			nameSpace = name.left(name.lastIndexOf("."));
+			className = name.right(name.size() - name.lastIndexOf(".") - 1);
+			klass = mono_class_from_name(image, (const char*) nameSpace.toLatin1(), (const char*) className.toLatin1());
+			MonoClass* p = klass;
+			do {
+				if (ifacestr != mono_type_get_name(mono_class_get_type(p)))
+					continue;
+				QString methodName = nameSpace + "." + className + ":.ctor(Qyoto.QObject,System.Collections.Generic.List`1)";
+				MonoMethodDesc* desc = mono_method_desc_new((const char*) methodName.toLatin1(), true);
+				ctor = mono_method_desc_search_in_class(desc, klass);
+				if (ctor) break;
+			} while ((p = mono_class_get_parent(p)));
+			if (ctor) break;
+		}
+	}
+
 	if (!ctor) {
-		kWarning() << "Didn't find method" << methodName << "in class" << nameSpace + "." + className;
+		kWarning() << "Didn't find a matching constructor in the classes of the assembly";
 		return 0;
 	}
 	
